@@ -35,7 +35,7 @@ public:
     wxIconBundle();
 
     // initializes the bundle with the icon(s) found in the file
-    wxIconBundle(const wxString& file, long type);
+    wxIconBundle(const wxString& file, wxBitmapType type);
 
     // initializes the bundle with a single icon
     wxIconBundle(const wxIcon& icon);
@@ -50,7 +50,7 @@ public:
     // adds all the icons contained in the file to the collection,
     // if the collection already contains icons with the same
     // width and height, they are replaced
-    void AddIcon(const wxString& file, long type);
+    void AddIcon(const wxString& file, wxBitmapType type);
 
     // adds the icon to the collection, if the collection already
     // contains an icon with the same width and height, it is
